force-app/main/default/objects/Order_Summary__c/Order_Summary__c.object-meta.xml
<CustomObject>
    <description>Summary of all order details for this customer in a given month.</description>
    <label>Order Summary</label>
    <nameField>
        <label>Order Summary Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>