force-app/main/default/objects/Order_Summary__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>The customer Account this Summary belongs to.</description>
    <inlineHelpText>The customer Account this Summary belongs to.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>