force-app/main/default/objects/Order_Summary__c/fields/End_of_Period__c.field-meta.xml
<CustomField>
    <fullName>End_of_Period__c</fullName>
    <description>The ending of the time period this record summarizes.</description>
    <inlineHelpText>The ending of the time period this record summarizes.</inlineHelpText>
    <label>End of Period</label>
    <required>true</required>
    <type>Date</type>
</CustomField>