force-app/main/default/objects/Order_Summary__c/fields/Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders__c</fullName>
    <description>How many orders were placed during this time period.</description>
    <inlineHelpText>How many orders were placed during this time period.</inlineHelpText>
    <label>Number of Orders</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>