force-app/main/default/objects/Order_Summary__c/fields/Start_of_Period__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Period__c</fullName>
    <description>The beginning of the time period this record summarizes.</description>
    <inlineHelpText>The beginning of the time period this record summarizes.</inlineHelpText>
    <label>Start of Period</label>
    <required>true</required>
    <type>Date</type>
</CustomField>