force-app/main/default/objects/Order_Summary__c/fields/Value_of_Goods_Sold__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Goods_Sold__c</fullName>
    <description>The total value of orders placed in this time period.</description>
    <inlineHelpText>The total value of orders placed in this time period.</inlineHelpText>
    <label>Value of Goods Sold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>